crux-llvm/test-data/golden/abd-test-maxint-32.cvc5.good
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/abd-test-maxint-32.c:6:0: error: in main
[Crux]   crucible_assert
[Crux] 
[Crux]   One of the following 2 fact(s) would entail the goal
[Crux]   * (bvult x #b00000000000000000000000000000001)
[Crux]   * (bvult x #b11111111111111111111111111111111)
[Crux] Overall status: Invalid.
